@@ -8,6 +8,7 @@ o When asking for the top x rows by some value, Cypher will now only keep a list
 o Fix so identifiers created inside a foreach can be used by other statements in the foreach
 o Fix for problems when using patterns with multiple unnamed nodes
 o Fixes problems when doing ORDER BY ... LIMIT x. When x is larger than the input set, sorting was never done.
+o Fixes problems when updating a graph element with a map containing null values
 
 1.9.M01 (2012-10-23)
 --------------------
